--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   firebase_core: ^2.14.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
