--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
 
   firebase_core: ^2.14.0
   qr_code_scanner: ^1.0.1
+  cloud_firestore: ^4.8.1
 
 dev_dependencies:
   flutter_test:
