--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_core: ^2.14.0
   qr_code_scanner: ^1.0.1
   cloud_firestore: ^4.8.1
+  sqflite: ^2.2.8+4
+  intl: ^0.18.1
+  uuid: ^3.0.7
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/local_database.db
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
