--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  firebase_core: ^2.14.0
   qr_code_scanner: ^1.0.1
-  cloud_firestore: ^4.8.1
   sqflite: ^2.2.8+4
   intl: ^0.18.1
   uuid: ^3.0.7
@@ -69,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/local_database.db
+    - assets/placeholder.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
