--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   provider: ^6.0.5
   http: ^1.1.0
   connectivity: ^3.0.6
+  bcrypt: ^1.1.3
+  argon2: ^1.0.1
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
